# Subtap

./: .coverage  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  RELEASE.md  SECURITY.md  TUI设计.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: play-ask-sound.sh  skill-gate.py  validate-commit-msg.py
.githooks/: post-checkout  post-commit  pre-commit
.github/workflows/: ci.yml  release.yml
.superpowers/brainstorm/: .last-token
.superpowers/sdd/: final-fix-report.md  progress.md  task-24-brief.md  task-24-report.md  task-25-brief.md  task-25-report.md  task-26-brief.md  task-26-report.md  task-27-brief.md  task-27-report.md  task-28-brief.md  task-28-report.md  task-30-report.md  task-31-report.md  task-33-brief.md  task-33-report.md
Formula/: subtap.rb
benchmarks/: README.md  benchmark_config.yaml  generate_srt.py  run_all.sh
benchmarks/data/: conjunctions_zh.json
benchmarks/implementations/: anomaly.py  base.py  baseline.py  combined.py  conjunctions.py  funasr_punct.py  regroup.py  stable_ts.py
benchmarks/utils/: metrics.py  srt_generator.py
configs/: default.yaml
configs/models/: manifest.yaml
docs/: acceptance-test-2026-06-27.md  acceptance-test-2026-06-28.md  release-acceptance-checklist.md  smart-split-algorithm.md
docs/adr/: 0001-homebrew-distribution-carrier.md
docs/research/: 2026-07-13-wheelhouse-license-review.md
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-06-27/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.json  manifest.json
graphify-out/cache/: stat-index.json
macos/: Package.resolved
macos/Sources/UI/: GlassSurface.swift  (+1 more)
output-review/: 高质量中文语音.srt
output_test/: aligned.jsonl  aligned_subtitles.jsonl  cleaned.jsonl  debug.json  media_info.json  metrics.json  report.md  run.log.jsonl  run_meta.json  sentences.jsonl  高质量中文语音.srt
output_test/asr/: asr.jsonl  asr_draft.jsonl
output_test/chunks/: chunks.jsonl
packaging/homebrew/: acceptance.sh  build-cask-artifact.sh  evaluate.py  license-policy.json  subtap.rb.in
scripts/: check.sh  check_performance.py  check_srt_delivery.py  check_srt_regression.py  cold_install_test.sh  compare_alignment.py  generate-changelog.sh  homebrew_acceptance.sh  homebrew_wheelhouse.py  install.sh  release-check.sh  release_metadata.py  render_homebrew_formula.py  smoke_offline.sh
src/subtap/: __init__.py  batch.py  batch_abort.py  batch_config.py  batch_dashboard.py  batch_interactive.py  batch_progress.py  cli.py  compose.py  translation.py
tests/: conftest.py  helpers.py  test_ai_hotword_replacement.py  test_align.py  test_align_refiner.py  test_aligned_subtitle_contract.py  test_artifacts_written.py  test_asr.py  test_asr_draft_contract.py  test_asr_fail_fast.py  test_asr_postprocess.py  test_batch.py  test_batch_abort.py  test_batch_config.py  test_batch_dashboard.py  test_batch_interactive.py  test_batch_progress.py  test_batch_transcribe.py  test_benchmark_anomaly.py  test_benchmark_baseline.py  test_benchmark_combined.py  test_benchmark_conjunctions.py  test_benchmark_edge_cases.py  test_benchmark_funasr.py  test_benchmark_interface.py  test_benchmark_metrics.py  test_benchmark_regroup.py  test_benchmark_srt.py  test_benchmark_stable_ts.py  test_chunks.py  test_clauses.py  test_clean.py  test_clean_llm_config.py  test_clean_llm_enhancement.py  test_cleanroom.py  test_cleanup.py  test_cli.py  test_cli_help_design.py  test_cli_no_api_asr_flags.py  test_cli_translation_flags.py  (+147 more)
tests/fixtures/: high_quality_zh_glossary.txt  high_quality_zh_glossary.yaml  high_quality_zh_required_cues.txt  script_test_asr_sentences_performance.jsonl  script_test_manuscript.docx  script_test_manuscript.md  script_test_manuscript.srt  script_test_manuscript.txt  script_test_manuscript.xlsx  script_test_manuscript_empty_after_filter.txt  script_test_manuscript_mixed_language.txt  script_test_manuscript_performance.txt  script_test_manuscript_very_long.txt  script_test_manuscript_very_short.txt  script_test_manuscript_with_errors.txt
work-review/: aligned.jsonl  aligned_subtitles.jsonl  cleaned.jsonl  debug.json  media_info.json  metrics.json  report.md  run.log.jsonl  run_meta.json  sentences.jsonl
work-review/asr/: asr.jsonl  asr_draft.jsonl
work-review/chunks/: chunks.jsonl
work_test_pydub/chunks/: chunks.jsonl
work_test_pydub_single/chunks/: chunks.jsonl
work_test_vad/chunks/: chunks.jsonl
(+212 files in other folders)
