[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subtap"
version = "0.1.0"
description = "Local-first TUI subtitle tool with plugin-based ASR/LLM/Aligner pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pydub>=0.25.1",
    "rich>=13.0",
    "httpx>=0.27",
    "python-docx>=1.0",
    "openpyxl>=3.0",
    "rapidfuzz>=3.0",
    "jieba>=0.42.1",
    "audioop-lts>=0.2.2; python_version>='3.13'",
    "silero-vad>=6.2.1",
    "onnxruntime>=1.24.3",
]

[project.optional-dependencies]
ai = [
    "spacy>=3.0",
    "nltk>=3.8",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
    "black>=24.0",
    "mypy>=1.13",
    "build>=1.2",
]

[project.scripts]
subtap = "subtap.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/subtap"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.coverage",
    "/.superpowers",
    "/graphify-out",
    "/work_test_*",
    "/dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
asyncio_mode = "auto"

[[tool.mypy.overrides]]
module = ["mlx_audio.*", "pydub", "pydub.*", "yaml", "openpyxl.*", "docx.*", "torch", "torch.*", "torchaudio", "torchaudio.*", "silero_vad", "silero_vad.*", "textual", "textual.*", "jieba", "questionary"]
ignore_missing_imports = true
